VFS-2364 Added missing spacing on home pages, fixed login page style

--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -380,3 +380,7 @@ input {
     font-size: 256px;
   }
 }
+
+.container-home > .container:first-child, .container-home > .container-index {
+  margin-top: 50px;
+}
